fix slider items align

--- a/src/app.css
+++ b/src/app.css
@@ -4901,7 +4901,7 @@ strong {
 
 .slider_list.swiper-wrapper {
   height: 100%;
-  justify-content: flex-start;
+  justify-content: flex-center;
   padding-left: 14em;
 }
 
